
 - the PyPI distribution of the `PyNUTClient` module tarball should now use a
   lower-cased file name (and immediate versioned directory name inside) to
   match the requirements of link:https://peps.python.org/pep-0625/[PEP-0625].
   The Python module name (and its directory) should remain camel-cased. [#2773]

 - added man page for the `NUT-Monitor` Python UI client.

 - enabled installation of built single-file PDF and HTML (including man page
   renditions) under the configured `docdir`. It seems previously they were
   only built (if requested) but not installed via `make`, unlike the common
   man pages which are delivered automatically. [#2445]
+
   NOTE: The `html-chunked` documents are currently still not installed.

 - added support to `./configure --with-doc=man=dist-auto` to use distributed
   manual page files if present; only fall back to build them if we can. [#2473]

 - added a `make distcheck-light-man` recipe to require verification that the
   manual page files can be built using the prepared "tarball" archive. [#2473]

 - revised the documentation building recipes, with the goal to avoid building
   the `ChangeLog` products and their intermediate files more than once (but
   still react to `git` metadata changes during development), and to sanity
   check the resulting final document (currently only for `html-single` mode).
   As part of this, the `CHANGELOG_REQUIRE_GROUP_BY_DATE_AUTHOR` setting was
   added (for `make` calls and used by `tools/gitlog2changelog.py.in` script),
   and it defaults to `true` allowing for better ordered documents at the cost
   of some memory during document generation. [#2510]

 - updated man page generation with `configure` script options to specify that
   manual sections on the target platform differ from (Linux-based) defaults
   hard-coded into page sources; this should allow to simplify NUT packaging
   recipe maintenance in distributions (no more updating patches for changed