@@ -9,8 +9,9 @@
 #
 # License: GPLv2+
 
-# Currently we have issues using localization for py3qt5 variant,
-# so if both seem functional, the wrapper would call py2gtk2:
+# We used to have issues using localization for py3qt5 variant,
+# so if both seem functional, the wrapper would call py2gtk2.
+# NOTE: This may be no longer relevant (since NUT-Monitor 2.0.2):
 case "${PREFER_PY2-}" in
     true|false) ;;
     "") PREFER_PY2=true ;;
