@@ -32,6 +32,10 @@
 #
 # 2023-11-27 Laurent Bigonville - Version 2.0.1
 #            Set the DesktopFileName
+#
+# 2025-03-15 Jim Klimov - Version 2.0.2
+#            Revise localisation, inject PACKAGE_VERSION and NUT_WEBSITE_BASE
+#            into the About dialog contents
 
 
 import PyQt5.uic
@@ -644,11 +648,15 @@ class interface :
         ### sys.stderr.write("gui_about_dialog(): dialog=%s\n" % str(dir(dialog)))
         ### sys.stderr.write("gui_about_dialog(): label=%s\n" % str(dir(dialog.label)))
         ### sys.stderr.write("gui_about_dialog(): text=%s\n" % str(dir(dialog.label.text)))
-        s = (dialog.label.text()
+        s = dialog.label.text()
+        ### sys.stderr.write("gui_about_dialog(): s (original) ='%s'\n" % s)
+        s = _(s)
+        ### sys.stderr.write("gui_about_dialog(): s (localized) ='%s'\n" % s)
+        s = (s
              .replace('%s%s%s' % ("@", "PACKAGE_VERSION", "@"), '@PACKAGE_VERSION@')
              .replace('%s%s%s' % ("@", "NUT_WEBSITE_BASE", "@"), '@NUT_WEBSITE_BASE@')
             )
-        ### sys.stderr.write("gui_about_dialog(): s='%s'\n" % s)
+        ### sys.stderr.write("gui_about_dialog(): s (rewritten) ='%s'\n" % s)
         dialog.label.setText(s)
 
         credits_button = QPushButton( dialog )
